--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,6 @@
+= Readme
+:imagesdir: ./docs
+
 = C4 PlantUML Helper Macro
 
 Getting up to speed with C4 is easy peasy and before you know it you have more diagram scripts than you can shake a stick at.
@@ -11,25 +14,22 @@ The issue then becomes:
 
 C4_Helper to the rescue.
 
-image:C4 Model Helper Context.svg[Context]
+image::context_view.svg[Context]
 
 == Container 
 .container diagram example
 [source, script]
 ----
-@startuml C4 Model Helper Container View
-!includeurl https://raw.githubusercontent.com/RicardoNiepel/C4-PlantUML/release/1-0/C4_Context.puml
-!includeurl https://raw.githubusercontent.com/RicardoNiepel/C4-PlantUML/release/1-0/C4_Container.puml
-!includeurl https://raw.githubusercontent.com/RicardoNiepel/C4-PlantUML/release/1-0/C4_Component.puml
-!include C4_helper.iuml
-Title C4 Model Helper Container View 
+@startuml container_view
+'!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml
+!include ../C4-PlantUML-master/C4_Component.puml
+!include ../C4-Plantuml-Helper/C4_helper.iuml
+Title \nC4 Model Helper Container View\n 
 %set_variable_value("$C4_LEVEL", "CONTAINER")
 '%set_variable_value("$INCLUDE_DESC", "Y")
 
 $container_boundary(vsc)
 	$component(vsc_plant)
-	}
-	$component(vsc_snippet)
 	}
 }
 
@@ -37,20 +37,25 @@ $container_boundary(plantuml)
 	Component(jar, "plantuml.jar", "java")		
 }
 $container_boundary(github)
+	$component(git_arc)
+	}
 	$component(git_c4)
 	}
 	$component(git_c4_helper)
 	}
+	$component(git_svg)
+	}
 }
-Rel_Right(jar, vsc_plant, "references")
-Rel_Up(git_c4, vsc_plant, "includes")
-Rel_Up(git_c4_helper, vsc_plant, "includes")
-Rel_Up(git_c4_helper, vsc_snippet, "installed from")
+jar --> vsc_plant :references
+vsc_plant <-- git_arc : processes
+vsc_plant --> git_svg :renders
+git_c4 -U-> git_arc :includes
+git_c4_helper -U-> git_arc :includes
 
 @enduml
 ----
 
-image:C4 Model Helper Container View.svg[Container]
+image::container_view.svg[Container]
 
 [source, script]
 ----
@@ -60,7 +65,7 @@ Title C4 Model Helper Container List
 $container_list()
 @enduml
 ----
-image:C4 Model Helper Container List.svg[Container List]
+image::container_list.svg[Container List]
 
 == Component 
 .component diagram example
@@ -99,7 +104,7 @@ Rel_Left(c4con, c4ctx, "get context by id")
 @enduml
 ----
 
-image:C4 Model Helper Component View.svg[Component]
+image::component_view.svg[Component]
 
 .$component_list()
 creates a legend containing a list of registered componenets
@@ -112,13 +117,13 @@ $component_list()
 @enduml
 ----
 
-image:C4 Model Helper Component List.svg[Component List]
+image::component_list.svg[Component List]
 
 == Installation Notes
-The C4_helper.iuml is a PlantUML Preprocessor and requires the V2 of the https://plantuml.com/preprocessing[plantuml preprocessor] and at least release  of 1.2020.07.
+The C4_helper.iuml is a PlantUML Preprocessor and requires the V2 of the https://plantuml.com/preprocessing[plantuml preprocessor] and at least release of 1.2020.07.
 
 An updated C4 Code Snippet is included which cater for the new helper routines introduced.
-The following variable are used
+Thje following variable are used
 
 [options="header",cols="<.<2,<.<1, <.<4"]
 |===
@@ -132,5 +137,3 @@ The following variable are used
 == Future Considerations
 The scripts have been coded to support the externalisation of the Context, Container and Compoenent registries. 
 The json based regesistries are currrently imbedded within the helper script pending plantumls release of the *%loadJSON("context.json")* function.
-
-I will endevour to source a confluence sandpit site to demonstrate the linakability between the C4 levels.
