--- a/examples/widget/adr_002.md
+++ b/examples/widget/adr_002.md
@@ -4,7 +4,7 @@
   - [Overview](#overview)
   - [Context View](#context-view)
   - [Alternatives](#alternatives)
-  - [Pricicples](#pricicples)
+  - [Principles](#principles)
   - [Motivation](#motivation)
   - [Consequences](#consequences)
   
@@ -20,7 +20,7 @@ add diagram
 
 add table of options..
 
-## Pricicples
+## Principles
 
 add table
 
